--- a/deploy/canary-ingress.yaml
+++ b/deploy/canary-ingress.yaml
@@ -4,11 +4,11 @@ metadata:
   name: canary-demo
   annotations:
     nginx.ingress.kubernetes.io/proxy-body-size: "100m"
-    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/app-root: /
 spec:
+  ingressClassName: nginx-public
   rules:
-  - host: canary.dev.argoproj.io
+  - host: canary.rnd.sandbox.codefresh.io
     http:
       paths:
       - path: /
