--- a/deploy/canary-ingress.yaml
+++ b/deploy/canary-ingress.yaml
@@ -4,8 +4,7 @@ metadata:
   name: canary-demo
   annotations:
     nginx.ingress.kubernetes.io/proxy-body-size: "100m"
-    nginx.ingress.kubernetes.io/app-root: /
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx-public
   rules:
