--- a/deploy/canary-preview-ingress.yaml
+++ b/deploy/canary-preview-ingress.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ingressClassName: nginx-public
   rules:
-  - host: canary-preview.rnd.sandbox.codefresh.io
+  - host: vadym-demo-canary-preview.rnd.sandbox.codefresh.io
     http:
       paths:
       - path: /
