--- a/deploy/canary-rollout.yaml
+++ b/deploy/canary-rollout.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: canary-demo
-        image: vadimkharincodefresh/rollouts-demo:blue
+        image: vadimkharincodefresh/rollouts-demo:red
         imagePullPolicy: Always
         ports:
         - name: http
