CR-22200 Update canary-rollout.yaml

--- a/deploy/canary-rollout.yaml
+++ b/deploy/canary-rollout.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: canary-demo
-        image: vadimkharincodefresh/rollouts-demo:red
+        image: vadimkharincodefresh/rollouts-demo:green
         imagePullPolicy: Always
         ports:
         - name: http
